--- a/week-3/Homework/2-slideshow/index.html
+++ b/week-3/Homework/2-slideshow/index.html
@@ -12,6 +12,18 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+
+    <div id="maindiv">
+      <div id="firstinner"></div>
+      <div id="secondinner"></div>
+      <div>
+        <button id="startbutton" type="button">start</button>
+        <button id="stopbutton" type="button">stop</button>
+        <button id="forwardbutton" type="button">forward</button>
+        <button id="backwardbutton" type="button">backword</button>
+
+      </div>
+    </div>
     <!-- Write your HTML in here -->
   </body>
 </html>
