--- a/week-3/InClass/B-movies/index.html
+++ b/week-3/InClass/B-movies/index.html
@@ -23,6 +23,26 @@
         <p class="alert alert-info">Number of movies: <span id="movies-number"></span></p>
       </div>
     </div>
+
+  
+    <div>
+      <label for="title">Title</label>
+      <input id="title" name="title" type="text">
+    </div>
+    <div>
+      <label for="director">Director</label>
+      <input id="director" name="director" type="text">
+    </div>
+    <div>
+      <label for="type">Type</label>
+      <input id="type" name="type" type="text">
+    </div>
+    <div>
+      <label for="haveWatched">Have-Watched</label>
+      <input id="haveWatched" name="haveWatched" type="text">
+    </div>
+    <button onclick="handleSubmit()">Submit</button>
+  
     <script src="exercise.js"></script>
 </body>
 
