--- a/week-3/Homework/2-slideshow/index.html
+++ b/week-3/Homework/2-slideshow/index.html
@@ -16,7 +16,7 @@
     <div id="maindiv">
       <div id="firstinner"></div>
       <div id="secondinner"></div>
-      <div>
+      <div id="buttonsdiv">
         <button id="startbutton" type="button">start</button>
         <button id="stopbutton" type="button">stop</button>
         <button id="forwardbutton" type="button">forward</button>
